Minor edit to index view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,6 @@
 <h1>{{title}}</h1>
 <h2>This is the index view for Neptune.</h2>
+
+<h4>Index page content will go hereabouts.</h4>
+
 <p>Welcome to {{title}}</p>
