Close #10 - Add images, views and routes used for the user management

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,10 @@
-<h1>{{title}}</h1>
-<h2>This is the index view for Neptune.</h2>
-
-<h4>Index page content will go hereabouts.</h4>
-
-<p>Welcome to {{title}}</p>
+<div class="jumbo-container">
+	<div class="jumbotron">
+		<center><h2 class="display-3">Neptune</h2>
+		<h2 class="display-4">❤️ 📸 📽 🤳</h2>
+		<p class="lead">A shared task manager! Yay!</p>
+		<hr class="my-4">
+		<p>A quick summary of what this web application does should go here.</p>
+		<a class="btn btn-primary btn-lg" href="/signup" role="button">Sign Up</a></center>
+	</div>
+</div>
