--- a/views/passport/private.hbs
+++ b/views/passport/private.hbs
@@ -1,9 +1,9 @@
 {{#if user}}
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-sm-auto">
-				{{> userprofile }}
-			</div>
+			// <div class="col-sm-auto">
+			//	{{> userprofile }}
+			// </div>
 			<div class="col">
 				<div class="row flex flex-wrap">
 					{{#each photos}}
